--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,8 +1,8 @@
 name: Release NuGet packages on tag pushed
 on:
-  push:
+  create:
     tags:
-    - "v[0-9]+.[0-9]+.[0-9]+(-.+)?"
+    - v*
 jobs:
   build:
     runs-on: ubuntu-latest
