--- a/RuleEngine.Core/RuleEngine.Core.csproj
+++ b/RuleEngine.Core/RuleEngine.Core.csproj
@@ -12,21 +12,21 @@
     <PackageReference Include="IronMeta" Version="4.5.0" />
   </ItemGroup>
 
-  <!-- uncomment this section to enable build-time RuleSetSyntaxMatcher generation by IronMeta  -->
-  <Target Name="Generate_RuleSetSyntaxMatcher" BeforeTargets="BeforeBuild">
-    <Exec Command="$(NuGetPackageRoot)ironmeta\4.5.0\tools\net5.0\IronMeta.App.exe -f -n RuleEngine.Core.Build.Tokenization.Grammar $(ProjectDir)Build\Tokenization\Grammar\RuleSetSyntaxMatcher.ironmeta" />
-    <ItemGroup>
-      <Compile Include="$(ProjectDir)Construction\Tokenization\Grammar\*$(DefaultLanguageSourceExtension)" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />
-    </ItemGroup>
-  </Target>
+  <!-- uncomment this section to enable build-time RuleSetSyntaxMatcher generation by IronMeta -->
+<!--  <Target Name="Generate_RuleSetSyntaxMatcher" BeforeTargets="BeforeBuild">-->
+<!--    <Exec Command="$(NuGetPackageRoot)ironmeta\4.5.0\tools\net5.0\IronMeta.App.exe -f -n RuleEngine.Core.Build.Tokenization.Grammar $(ProjectDir)Build\Tokenization\Grammar\RuleSetSyntaxMatcher.ironmeta" />-->
+<!--    <ItemGroup>-->
+<!--      <Compile Include="$(ProjectDir)Construction\Tokenization\Grammar\*$(DefaultLanguageSourceExtension)" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />-->
+<!--    </ItemGroup>-->
+<!--  </Target>-->
 
-  <!-- uncomment this section to enable build-time CSharpSyntaxMatcher generation by IronMeta-->
-  <Target Name="Generate_CSharpSyntaxMatcher" BeforeTargets="BeforeBuild">
-    <Exec Command="$(NuGetPackageRoot)ironmeta\4.5.0\tools\net5.0\IronMeta.App.exe -f -n RuleEngine.Core.Lib.CodeAnalysis.Tokenization.Grammar $(ProjectDir)Lib\CodeAnalysis\Tokenization\Grammar\CSharpSyntaxMatcher.ironmeta" />
-    <ItemGroup>
-      <Compile Include="$(ProjectDir)Lib\CodeAnalysis\Tokenization\Grammar\*$(DefaultLanguageSourceExtension)" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />
-    </ItemGroup>
-  </Target>
+  <!-- uncomment this section to enable build-time CSharpSyntaxMatcher generation by IronMeta -->
+<!--  <Target Name="Generate_CSharpSyntaxMatcher" BeforeTargets="BeforeBuild">-->
+<!--    <Exec Command="$(NuGetPackageRoot)ironmeta\4.5.0\tools\net5.0\IronMeta.App.exe -f -n RuleEngine.Core.Lib.CodeAnalysis.Tokenization.Grammar $(ProjectDir)Lib\CodeAnalysis\Tokenization\Grammar\CSharpSyntaxMatcher.ironmeta" />-->
+<!--    <ItemGroup>-->
+<!--      <Compile Include="$(ProjectDir)Lib\CodeAnalysis\Tokenization\Grammar\*$(DefaultLanguageSourceExtension)" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />-->
+<!--    </ItemGroup>-->
+<!--  </Target>-->
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
