--- a/RuleEngine.Mechanics.Peg/RuleEngine.Mechanics.Peg.csproj
+++ b/RuleEngine.Mechanics.Peg/RuleEngine.Mechanics.Peg.csproj
@@ -14,13 +14,13 @@
     <PackageReference Include="IronMeta" Version="4.5.0" />
   </ItemGroup>
 
-  <!-- uncomment this section to enable build-time PegSyntaxMatcher generation by IronMeta  -->
-  <Target Name="Generate_PegSyntaxMatcher" BeforeTargets="BeforeBuild">
-    <Exec Command="$(NuGetPackageRoot)ironmeta\4.5.0\tools\net5.0\IronMeta.App.exe -f -n RuleEngine.Mechanics.Peg.Build.Tokenization.Grammar $(ProjectDir)Build\Tokenization\Grammar\PegSyntaxMatcher.ironmeta" />
-    <ItemGroup>
-      <Compile Include="$(ProjectDir)Construction\Tokenization\Grammar\*$(DefaultLanguageSourceExtension)" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />
-    </ItemGroup>
-  </Target>
+  <!-- uncomment this section to enable build-time PegSyntaxMatcher generation by IronMeta -->
+<!--  <Target Name="Generate_PegSyntaxMatcher" BeforeTargets="BeforeBuild">-->
+<!--    <Exec Command="$(NuGetPackageRoot)ironmeta\4.5.0\tools\net5.0\IronMeta.App.exe -f -n RuleEngine.Mechanics.Peg.Build.Tokenization.Grammar $(ProjectDir)Build\Tokenization\Grammar\PegSyntaxMatcher.ironmeta" />-->
+<!--    <ItemGroup>-->
+<!--      <Compile Include="$(ProjectDir)Construction\Tokenization\Grammar\*$(DefaultLanguageSourceExtension)" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />-->
+<!--    </ItemGroup>-->
+<!--  </Target>-->
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
