--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -24,14 +24,16 @@ jobs:
       - name: Build
         run: dotnet build --no-restore --configuration Release /p:Version=${VERSION}
       - name: Test
-        run: dotnet test --no-build --configuration Release /p:Version=${VERSION} --verbosity normal
+        run: dotnet test --no-restore --no-build --configuration Release /p:Version=${VERSION} --verbosity normal
       - name: Pack
-        run: dotnet pack --no-build --configuration Release /p:Version=${VERSION} --output .
+        run: dotnet pack --no-restore --no-build --configuration Release /p:Version=${VERSION} /p:RepositoryUrl=${REPOSITORY_URL} /p:PublishRepositoryUrl=true --include-source --include-symbols --output . 
       - name: Push
         run: |
-          dotnet nuget push RuleEngine.Core.${VERSION}.nupkg --source https://nuget.pkg.github.com/dotnet-nlp/index.json --api-key ${GITHUB_TOKEN}
-          dotnet nuget push RuleEngine.Mechanics.Peg.${VERSION}.nupkg --source https://nuget.pkg.github.com/dotnet-nlp/index.json --api-key ${GITHUB_TOKEN}
-          dotnet nuget push RuleEngine.Mechanics.Regex.${VERSION}.nupkg --source https://nuget.pkg.github.com/dotnet-nlp/index.json --api-key ${GITHUB_TOKEN}
+          dotnet nuget push RuleEngine.Core.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
+          dotnet nuget push RuleEngine.Mechanics.Peg.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
+          dotnet nuget push RuleEngine.Mechanics.Regex.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SERVER_URL: https://nuget.pkg.github.com/dotnet-nlp/index.json
+          REPOSITORY_URL: foo
 
