--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -6,7 +6,7 @@ on:
       - v*
 
 env:
-  MSBUILD_PROPERTIES: /p:RepositoryUrl=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} /p:PublishRepositoryUrl=true
+  MSBUILD_PROPERTIES: /p:RepositoryUrl=${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }} /p:PublishRepositoryUrl=true
 
 jobs:
   release-nuget-packages:
@@ -40,4 +40,4 @@ jobs:
           dotnet nuget push RuleEngine.Mechanics.Regex.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SERVER_URL: https://nuget.pkg.github.com/${GITHUB_REPOSITORY_OWNER}/index.json
+          SERVER_URL: https://nuget.pkg.github.com/${{ env.GITHUB_REPOSITORY_OWNER }}/index.json
