--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -5,9 +5,6 @@ on:
     tags:
       - v*
 
-env:
-  MSBUILD_PROPERTIES: /p:RepositoryUrl=${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }} /p:PublishRepositoryUrl=true
-
 jobs:
   release-nuget-packages:
     name: Release NuGet packages
@@ -22,6 +19,8 @@ jobs:
           git branch --remote --contains | grep origin/main
       - name: Set VERSION variable from tag
         run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Set MSBUILD_PROPERTIES variable
+          run: echo "MSBUILD_PROPERTIES=/p:Version=${VERSION} /p:RepositoryUrl=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} /p:PublishRepositoryUrl=true
       - uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
