--- a/.github/workflows/nuget-prerelease.yml
+++ b/.github/workflows/nuget-prerelease.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  MSBUILD_PROPERTIES: /p:RepositoryUrl=${{ env.GITHUB_SERVER_URL }}/${{ env.GITHUB_REPOSITORY }} /p:PublishRepositoryUrl=true
-
 jobs:
   get-next-version:
     name: Draft new Pre-Release version
@@ -43,17 +40,19 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set VERSION variable
         run: echo "VERSION=${{ needs.get-next-version.outputs.preview }}" >> $GITHUB_ENV
+      - name: Set MSBUILD_PROPERTIES variable
+        run: echo "MSBUILD_PROPERTIES=/p:Version=${VERSION} /p:RepositoryUrl=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} /p:PublishRepositoryUrl=true
       - uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build /p:Version=${VERSION} ${MSBUILD_PROPERTIES} --configuration Release --no-restore
+        run: dotnet build ${MSBUILD_PROPERTIES} --configuration Release --no-restore
       - name: Test
-        run: dotnet test /p:Version=${VERSION} ${MSBUILD_PROPERTIES} --configuration Release --no-restore --no-build --verbosity normal
+        run: dotnet test ${MSBUILD_PROPERTIES} --configuration Release --no-restore --no-build --verbosity normal
       - name: Pack
-        run: dotnet pack /p:Version=${VERSION} ${MSBUILD_PROPERTIES} --configuration Release --no-restore --no-build --include-source --include-symbols --output . 
+        run: dotnet pack ${MSBUILD_PROPERTIES} --configuration Release --no-restore --no-build --include-source --include-symbols --output . 
       - name: Push
         run: |
           dotnet nuget push RuleEngine.Core.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
