--- a/.github/workflows/nuget-prerelease.yml
+++ b/.github/workflows/nuget-prerelease.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Set VERSION variable
         run: echo "VERSION=${{ needs.get-next-version.outputs.preview }}" >> $GITHUB_ENV
       - name: Set MSBUILD_PROPERTIES variable
-        run: echo "MSBUILD_PROPERTIES=/p:Version=${VERSION} /p:RepositoryUrl=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} /p:PublishRepositoryUrl=true
+        run: echo "MSBUILD_PROPERTIES=/p:Version=${VERSION} /p:RepositoryUrl=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} /p:PublishRepositoryUrl=true" >> $GITHUB_ENV
       - uses: actions/setup-dotnet@v2
         with:
           dotnet-version: 6.0.x
