--- a/.github/workflows/nuget-prerelease.yml
+++ b/.github/workflows/nuget-prerelease.yml
@@ -1,9 +1,6 @@
-name: Pre-Release NuGet packages on push to main branch
+name: Pre-Release NuGet packages from main branch
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 jobs:
   get-next-version:
@@ -58,6 +55,7 @@ jobs:
           dotnet nuget push DotnetNlp.RuleEngine.Core.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
           dotnet nuget push DotnetNlp.RuleEngine.Mechanics.Peg.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
           dotnet nuget push DotnetNlp.RuleEngine.Mechanics.Regex.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
+          dotnet nuget push DotnetNlp.RuleEngine.Bundle.${VERSION}.nupkg --source ${SERVER_URL} --api-key ${GITHUB_TOKEN}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SERVER_URL: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
