--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -5,9 +5,21 @@ on:
     types: [created]
 
 jobs:
+  get-version:
+    name: Get version from tag
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.get-version.outputs.version }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Extract version from tag
+        id: get-version
+        run: echo "::set-output name=version::${GITHUB_REF/refs\/tags\/v/}"
+
   release-nuget-packages:
     name: Release NuGet packages
     runs-on: ubuntu-latest
+    needs: [get-version]
     permissions:
       packages: write
     steps:
@@ -16,8 +28,8 @@ jobs:
         run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           git branch --remote --contains | grep origin/main
-      - name: Set VERSION variable from tag
-        run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      - name: Set VERSION variable
+        run: echo "VERSION=${{ needs.get-version.outputs.version }}" >> $GITHUB_ENV
       - name: Set MSBUILD_PROPERTIES variable
         run: echo "MSBUILD_PROPERTIES=/p:Version=${VERSION} /p:RepositoryUrl=${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY} /p:PublishRepositoryUrl=true" >> $GITHUB_ENV
       - uses: actions/setup-dotnet@v2
@@ -40,3 +52,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SERVER_URL: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+
+  release-pypi-packages:
+    name: Release PyPI packages
+    runs-on: ubuntu-latest
+    needs: [get-version]
+    steps:
+      - uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          repository: dotnet-nlp/rule-engine-python
+          event-type: release-pypi-packages
+          client-payload: '{"ref": "${{ github.ref }}", "version": "${{ needs.get-version.outputs.version }}"}'
