--- a/.github/workflows/nuget-release.yml
+++ b/.github/workflows/nuget-release.yml
@@ -60,7 +60,7 @@ jobs:
     steps:
       - uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          token: ${{ secrets.PYTHON_REPO_ACCESS_TOKEN }}
           repository: dotnet-nlp/rule-engine-python
           event-type: release-pypi-packages
           client-payload: '{"ref": "${{ github.ref }}", "version": "${{ needs.get-version.outputs.version }}"}'
